src/main/java/com/example/shoppingcart/error/UsernameAlreadyUsedException.java
package com.example.shoppingcart.error;

public class UsernameAlreadyUsedException extends RuntimeException {

}
